2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c, e-table-selection-model.h: New files
	for doing a selection model.  Not finished yet and thus not in
	Makefile.am.

	* e-table.c, e-table.h: Renamed the new dnd signals so that they
	won't conflict with the widget signals.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c, e-table.h: Implemented some of the drag & drop code.
	Drops all report as being on row 0, col 0.  Also, automatic drags
	don't set the row and column being dragged from.

2000-07-23  Damon Chaplin  <damon@helixcode.com>

	* e-cell-text.c: added a color_column where the color can be specified
	as a string, e.g. "red" or "rgb:F/0/0".

	* e-cell-text.c (ect_leave_edit): don't call unbuild_current_cell()
	since the CellEdit struct has been freed in ect_stop_editing() and so
	has the text.

	* e-cell-text.c (unbuild_current_cell): set cell->text to NULL to make
	sure we	don't try to free it again.

2000-07-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.h: Added some unused declarations for drag and drop
	work.

2000-07-14  Michael Meeks  <michael@helixcode.com>

	* e-table-subset.c (etss_destroy): g_free things we g_malloc.

2000-07-13  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Changed the background color of the
	header.

2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Made scroll wheel work properly in
	header.

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* e-table.c (set_scroll_adjustments): Be safe if @vadjustment is
	NULL.

	* e-table-scrolled.c (e_table_scrolled_init): Set policy and
	shadow type.
	(e_table_scrolled_real_construct): Don't set the adjustments.
	(e_table_scrolled_new): Create the widget with `gtk_widget_new()'
	and pass hadjustment/vadjustment NULL values so that we get the
	`GTK_OBJECT_CONSTRUCTED' approval.

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>
