@@ -1,5 +1,10 @@
 2000-07-25  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-selection-model.c: Fixed up the bit manipulation a bit
+	here.
+
+2000-07-25  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-selection-model.c, e-table-selection-model.h: New files
 	for doing a selection model.  Not finished yet and thus not in
 	Makefile.am.
